--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         </div>
 
         <audio id="audio" preload="metadata">
-            <source src="https://github.com/drtffyhu8fdghfgd/nhhhhhhhhhhhhhhhhhhhhhhh/raw/refs/heads/main/Safe%20and%20Sound%20X%20Ye%20-%20NHH%20(Extended%20+%20Hardstyle).mp3" type="audio/mpeg">
+            <source src="https://github.com/drtffyhu8fdghfgd/nhhhhhhhhhhhhhhhhhhhhhhh/raw/refs/heads/main/Safe%20and%20Sound%20X%20Ye%20-%20NHH%20(Extended%20+%20Hardstyle)%20(1).mp3" type="audio/mpeg">
         </audio>
     </div>
 
